--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "next": "13.4.19",
     "next-auth": "^4.23.1",
     "next-themes": "^0.2.1",
+    "nextjs-toploader": "^1.4.2",
     "openai": "^4.0.1",
     "postcss": "8.4.28",
     "react": "18.2.0",
