.env example updated

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,22 @@
+# Database connection
 DATABASE_URL=""
 NEXTAUTH_SECRET = ""
 
+# Github OAuth Credentials
 GITHUB_ID=""
 GITHUB_SECRET=""
 
+# Google OAuth Credentials
 GOOGLE_CLIENT_ID=""
 GOOGLE_CLIENT_SECRET=""
 
 NEXTAUTH_URL=""
 
+# OpenAI API key
 OPENAI_API_KEY=""
 
+# Replicate API key
 REPLICATE_API_KEY=""
+
+# Stripe API key
+STRIPE_API_KEY=
