--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-icons": "^4.10.1",
     "react-markdown": "^8.0.7",
     "replicate": "^0.16.1",
+    "stripe": "^13.2.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.6",
