--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "InfiniMind",
+  "name": "infinimind",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.2.0",
