--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/node": "20.5.1",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
+    "ai": "^2.2.13",
     "autoprefixer": "10.4.15",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.1",
@@ -36,6 +37,7 @@
     "next-themes": "^0.2.1",
     "nextjs-toploader": "^1.4.2",
     "openai": "^4.0.1",
+    "openai-edge": "^1.2.2",
     "postcss": "8.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
